--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-blinker==1.9.0
-click==8.2.2
-colorama==0.4.6
-Flask==3.1.1
-gunicorn==23.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-packaging==25.0
-Werkzeug==3.1.3
+fastapi==0.116.1
+uvicorn==0.23.2
+pydantic==2.11.7
+pydantic-settings==2.1.0
+requests==2.31.0
+pybit==5.10.1
